// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDictionary shoud create the expected dictionaries 1`] = `
Object {
  "and dogs": Array [
    0,
  ],
  "cats and": Array [
    "dogs",
  ],
}
`;

exports[`createDictionary shoud create the expected dictionaries when there are more than one occurance of the same word 1`] = `
Object {
  "and cats": Array [
    "and",
  ],
  "and dogs": Array [
    0,
  ],
  "cats and": Array [
    "cats",
    "dogs",
  ],
}
`;

exports[`createDictionaryFromInput should create the expected dictionary 1`] = `
Object {
  "a b": Array [
    "c",
    "c",
    "c",
  ],
  "b c": Array [
    "d!",
    "d",
    "d",
  ],
  "c d": Array [
    0,
    "d",
  ],
  "c d!": Array [
    0,
  ],
  "d d": Array [
    0,
  ],
}
`;
